sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: ';' expected but ',' found.
Si les cases i et i+1 doivent être inversées, le faire
                                            ^