sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	  for (i<-0 to lgr-2) {
	  	getValeur(i);
	  	if (getValeur(i)>getValeur(i+1)) {
	  		setValeur(i)==getValeur(i+1)
	  	}
	  }
}


Si les cases i et i+1 doivent être inversées, le faire
     tant qu'on a inverser des choses lors du dernier parcours